--- a/doc/opensp/HISTORY
+++ b/doc/opensp/HISTORY
@@ -1,3 +1,7 @@
+2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1; don't do useless doc'ing
+	* DEPENDS: added gettext optional dependency
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
