--- a/libs/libofx/HISTORY
+++ b/libs/libofx/HISTORY
@@ -1,3 +1,6 @@
+2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: renewed dependency-list & flags
+
 2014-01-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.9
 
