--- a/gnome2-apps/homebank/HISTORY
+++ b/gnome2-apps/homebank/HISTORY
@@ -1,3 +1,10 @@
+2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.5.6; cleaned up
+	* DEPENDS: added missing dependencies
+	* PRE_BUILD: added, to apply patch
+	* FINAL: added, to updated MIME database
+	* mime-noup.patch: added, to prevent MIME db from updating in INSTALL
+
 2010-04-27 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 4.2.1
 
