--- a/net/dhcp/HISTORY
+++ b/net/dhcp/HISTORY
@@ -1,3 +1,6 @@
+2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.2.6
+
 2013-04-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.2.5-P1; SECURITY_PATCH++ (CVE-2013-2266)
 
