--- a/python-pypi/psycopg2/HISTORY
+++ b/python-pypi/psycopg2/HISTORY
@@ -1,3 +1,6 @@
+2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.5.2
+
 2013-04-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.5
 	* DEPENDS: switched to PYTHON (added python3 compat)
