--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,6 @@
+2014-05-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.8.1
+
 2014-03-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.8
 
