--- a/libs/libevdev/HISTORY
+++ b/libs/libevdev/HISTORY
@@ -1,3 +1,6 @@
+2014-05-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2
+
 2014-04-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1
 
