--- a/devel/cgdb/HISTORY
+++ b/devel/cgdb/HISTORY
@@ -1,3 +1,6 @@
+2014-05-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.6.7
+
 2009-07-09 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 0.6.4
 
