--- a/chat-irc/znc/HISTORY
+++ b/chat-irc/znc/HISTORY
@@ -1,3 +1,6 @@
+2014-05-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4
+
 2014-03-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2; SECURITY_PATCH++ (CVE-2013-2130)
 
