--- a/doc/source-highlight/HISTORY
+++ b/doc/source-highlight/HISTORY
@@ -1,3 +1,6 @@
+2014-05-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.1.7
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	* 9E629EAC.gpg: added gpg keyring
