--- a/http/polipo/HISTORY
+++ b/http/polipo/HISTORY
@@ -1,3 +1,6 @@
+2014-05-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.1.1
+
 2014-04-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* init.d/polipo: implemented reload function to prevent exiting when
