--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,6 @@
+2014-05-16 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: fix typo
+
 2014-04-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6
 
