--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2014-05-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.19 (devel)
+
 2014-05-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.18 (devel)
 
