--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2014-05-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_DIRECTORY
+
 2014-03-08 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated GNUTLS_BRANCH=stable to 3.2.12.1
