--- a/xorg-lib/libxkbcommon/HISTORY
+++ b/xorg-lib/libxkbcommon/HISTORY
@@ -1,3 +1,6 @@
+2014-05-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.2
+
 2014-03-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.1
 
