--- a/xorg-app/xfd/HISTORY
+++ b/xorg-app/xfd/HISTORY
@@ -1,3 +1,6 @@
+2014-05-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS, BUILD: add dependencies on libXrender and libXmu
+
 2009-01-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: killing of XPrint
 	* DETAILS: patchlevel++
