--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-05-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* fonts-x11/ttf-mensch: new spell, a console font based on Menlo
+
 2014-05-10  Ismael Luceno <ismael@sourcemage.org>
 	* mail/isync: new spell, IMAP and MailDir mailbox synchronizer
 
