--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2014-05-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.9.0
+
 2014-05-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.8.4
 
