--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-20 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/greenlet: new spell, lightweight in-process concurrent
+	  programming
+
 2014-05-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* fonts-x11/ttf-mensch: new spell, a console font based on Menlo
 
