--- a/devel/perl/HISTORY
+++ b/devel/perl/HISTORY
@@ -1,3 +1,7 @@
+2014-05-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.18.2
+	* BUILD: remove make_single
+
 2013-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.18.1
 
