--- a/video-libs/smpeg/HISTORY
+++ b/video-libs/smpeg/HISTORY
@@ -1,3 +1,6 @@
+2014-05-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL
+
 2012-12-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix WEB_SITE
 
