--- a/python-pypi/numpy/HISTORY
+++ b/python-pypi/numpy/HISTORY
@@ -1,3 +1,6 @@
+2014-05-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: verison 1.8.1, fix SOURCE_URL
+
 2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.0
 
