--- a/printer/gutenprint/HISTORY
+++ b/printer/gutenprint/HISTORY
@@ -1,3 +1,6 @@
+2014-05-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.2.10
+
 2012-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.2.9
 
