--- a/xorg-lib/wayland/HISTORY
+++ b/xorg-lib/wayland/HISTORY
@@ -1,4 +1,7 @@
-2014-01-2254 Treeve Jelbert <treeve@sourcemage.org>
+2014-05-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.0
+
+2014-01-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.0
 
 2013-07-14 Treeve Jelbert <treeve@sourcemage.org>
