--- a/xorg-app/weston/HISTORY
+++ b/xorg-app/weston/HISTORY
@@ -1,3 +1,7 @@
+2014-05-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.0
+	* DEPENDS: mesalib => MESALIB
+
 2014-01-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.0
 
