--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,6 @@
+2014-05-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.8.9
+
 2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.8
 	  SECURITY_PATCH++ fix CVE-2014-0032
