--- a/libs/libedit/HISTORY
+++ b/libs/libedit/HISTORY
@@ -1,3 +1,6 @@
+2014-05-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 20140213-3.1
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
