--- a/shell-term-fm/rdesktop/HISTORY
+++ b/shell-term-fm/rdesktop/HISTORY
@@ -1,3 +1,6 @@
+2014-05-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.8.2
+
 2013-12-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added missing optional deps -- libgssglue, pcsc-lite
 
