--- a/devel/ctags/HISTORY
+++ b/devel/ctags/HISTORY
@@ -1,3 +1,6 @@
+2014-05-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL
+
 2009-08-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.8
 
