--- a/utils/powertop/HISTORY
+++ b/utils/powertop/HISTORY
@@ -1,3 +1,6 @@
+2014-05-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.6.1
+
 2013-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.3
 
