--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-05-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-hasktags: new spell, ctags for haskell
+
 2014-05-20 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/greenlet: new spell, lightweight in-process concurrent
 	  programming
