--- a/haskell/haskell-utf8-string/HISTORY
+++ b/haskell/haskell-utf8-string/HISTORY
@@ -1,3 +1,6 @@
+2014-05-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.8
+
 2011-10-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.7
 
