--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-05-24 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Use make_single
+
 2014-04-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.53
 
