--- a/utils/taskwarrior/HISTORY
+++ b/utils/taskwarrior/HISTORY
@@ -1,3 +1,9 @@
+2014-05-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1; don't duplicate docs
+	* DEPENDS: added new missing required util-linux dependency; removed
+	  deprecated lua (since 2.2.0); added missing optional dependencies
+	* BUILD: removed workaround for lua
+
 2014-01-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.3.0
 
