--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-05-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* python-pypi/python-llfuse: new spell, bindings for fuse's low-level API
+
 2014-05-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-hasktags: new spell, ctags for haskell
 
