--- a/python-pypi/pyopenssl/HISTORY
+++ b/python-pypi/pyopenssl/HISTORY
@@ -1,3 +1,6 @@
+2014-05-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.14
+
 2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: use PYTHON
 
