--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,7 @@
+2014-05-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, glibc-2.19-fix-sign-in-bsloww1-input.patch,
+	  glibc-2.19-xattr_header.patch: add bug fixes from arch linux
+
 2014-05-24 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.19, .bz2 -> .xz
 	* PRE_BUILD, as-test-x.patch, glibc-2.17-sync-with-linux37.patch: removed obsolete patches
