--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,5 +1,9 @@
+2014-05-25 Sukneet Basuta <sukneet@sourcemage.org>
+	* DETAILS: version 24.5.0
+	* DEPENDS: use nss version 3.16 
+
 2014-02-27 Remko van der Vossen <wich@sourcemage.org>
-»·······* DEPENDS: optional depends gstreamer
+        * DEPENDS: optional depends gstreamer
 
 2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 24.2.0, SECURITY_PATCH++
