--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,7 @@
+2014-05-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.0
+	  fix typo - ' => "
+
 2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.1.0
 
