--- a/shell-term-fm/shared-mime-info/HISTORY
+++ b/shell-term-fm/shared-mime-info/HISTORY
@@ -1,3 +1,6 @@
+2014-05-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3
+
 2013-12-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2
 
