--- a/net/dnsmasq/HISTORY
+++ b/net/dnsmasq/HISTORY
@@ -1,3 +1,6 @@
+2014-05-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.71
+
 2011-09-12 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 2.58
 	* PRE_BUILD: added hack to build with dbus (from Arch Linux) (fixes #183)
