--- a/xorg-data/xkeyboard-config/HISTORY
+++ b/xorg-data/xkeyboard-config/HISTORY
@@ -1,3 +1,6 @@
+2014-05-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.12
+
 2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.11
 
