--- a/doc/man-pages-posix/HISTORY
+++ b/doc/man-pages-posix/HISTORY
@@ -1,3 +1,6 @@
+2014-05-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2013-a
+
 2008-06-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, BUILD, HISTORY: created this spell, version 2003-a
 
