--- a/audio-players/cantata/HISTORY
+++ b/audio-players/cantata/HISTORY
@@ -1,3 +1,6 @@
+2014-05-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.3.4
+
 2014-03-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.3.3
 
