--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,6 @@
+2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: fix syntax error
+
 2014-05-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS, INSTALL, PREPARE, PRE_BUILD: add suppport
 	  for the lldb debugger
