--- a/xorg-app/xsetroot/HISTORY
+++ b/xorg-app/xsetroot/HISTORY
@@ -1,3 +1,6 @@
+2014-05-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.1
+
 2009-10-27 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.0.3
 	  SOURCE matches upstream posted MD5
