--- a/http/mod_wsgi/HISTORY
+++ b/http/mod_wsgi/HISTORY
@@ -1,3 +1,8 @@
+2014-05-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5; SECURITY_PATCH=1 (CVE-2014-0240);
+	  updated source url
+	* DEPENDS: python -> PYTHON
+
 2010-07-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.3
 
