--- a/graphics-libs/freeglut/HISTORY
+++ b/graphics-libs/freeglut/HISTORY
@@ -1,3 +1,6 @@
+2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: major cleanup
+
 2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS:  version 2.8.1
 
