--- a/graphics/leptonica/HISTORY
+++ b/graphics/leptonica/HISTORY
@@ -1,3 +1,6 @@
+2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2014-04-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.70
 	  new website & url
