--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,6 @@
+2014-10-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib =>  GIFLIB
+
 2013-08-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.10.5
 
