--- a/xorg-proto/inputproto/HISTORY
+++ b/xorg-proto/inputproto/HISTORY
@@ -1,3 +1,6 @@
+2013-05-30  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.3.1
+
 2013-03-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.3
 
