--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2014-05-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.29 (stable); SECUIRTY_PATCH++
+	  (CVE-2014-0238, CVE-2014-0237)
+
 2014-05-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.28 (stable); SECUIRTY_PATCH++
 	  (CVE-2014-0185)
