--- a/display/directfb/HISTORY
+++ b/display/directfb/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2011-03-10 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.4.11
 
