--- a/windowmanagers/windowmaker/HISTORY
+++ b/windowmanagers/windowmaker/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-02-20 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.95.4
 
