--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-05-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1.1, SECURITY_PATCH=4
 
