--- a/java/kaffe/HISTORY
+++ b/java/kaffe/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on gcj to dependency on gcc with
 	  sub-depends on JAVA (scripted)
