--- a/java/icedtea6/HISTORY
+++ b/java/icedtea6/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-02-18 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 1.12.2
 	* DEPENDS: added libffi
