--- a/http/dillo2/HISTORY
+++ b/http/dillo2/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2011-01-02 Ismael Luceno <ismael@sourcemage.org>
 	* dillo2.desktop: added generic name
 
