--- a/graphics/mtpaint/HISTORY
+++ b/graphics/mtpaint/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2012-01-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.40
 
