--- a/graphics/exact-image/HISTORY
+++ b/graphics/exact-image/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2011-12-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: lua -> lua51
 
