--- a/gnustep-libs/gnustep-gui/HISTORY
+++ b/gnustep-libs/gnustep-gui/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2014-01-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.24.0
 
