--- a/gnome2-libs/tracker/HISTORY
+++ b/gnome2-libs/tracker/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-02-26 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 0.14.5
 	* DEPENDS: added optional_depends taglib, libgxps, libcue, giflib, gdk-pixbuf2
