--- a/e/imlib2/HISTORY
+++ b/e/imlib2/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-06-23 Remko van der Vossen <wich@sourcemage.org>
 	* BUILD, CONFIGURE, DEPENDS: make X a proper optiona depends
 	* PRE_BUILD, Imlib2.h.patch: patch not needed anymore, --without-x is
