--- a/e-17/efl/HISTORY
+++ b/e-17/efl/HISTORY
@@ -1,3 +1,6 @@
+2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: giflib => GIFLIB
+
 2013-03-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: subversion -> git
 
