--- a/devel/qxorm/HISTORY
+++ b/devel/qxorm/HISTORY
@@ -1,3 +1,5 @@
+2014-05-32 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.7
 2014-02-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.6
 
