--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-01  Treeve Jelbert <treeve@sourcemage.org>
+	* accounts, group: add sddm
+
 2014-05-29  Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/giflib5: new spell, provides GIFLIB
 
