--- a/perl-cpan/config-param/HISTORY
+++ b/perl-cpan/config-param/HISTORY
@@ -1,3 +1,6 @@
+2014-05-31 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 3.001000
+
 2012-10-04 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 3.000010
 
