--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,7 @@
+2014-06-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD: add compiler-rt
+	* DETAILS: use signed tarball for lldb
+
 2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix syntax error
 
