--- a/chat-im/licq/HISTORY
+++ b/chat-im/licq/HISTORY
@@ -1,3 +1,6 @@
+2014-06-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.8.2
+
 2013-08-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.8.0
 
