--- a/disk/btrfs-progs/HISTORY
+++ b/disk/btrfs-progs/HISTORY
@@ -1,3 +1,6 @@
+2014-06-02 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fetch releases from git too
+
 2014-05-30 Ismael Luceno <ismael@sourcemage.org>
 	* PRE_BUILD: Upstream fixed manpage's Makefile
 
