--- a/disk/btrfs-progs/HISTORY
+++ b/disk/btrfs-progs/HISTORY
@@ -1,5 +1,6 @@
 2014-06-02 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fetch releases from git too
+	* DETAILS: Updated spell to 3.14.2
 
 2014-05-30 Ismael Luceno <ismael@sourcemage.org>
 	* PRE_BUILD: Upstream fixed manpage's Makefile
