--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2014-06-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.3
+
 2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.2
 	* CONFIGURE: add option for Blackmagick Decklink output
