--- a/crypto/gpgme/HISTORY
+++ b/crypto/gpgme/HISTORY
@@ -1,3 +1,7 @@
+2014-06-03 Treeve Jelbert <treeve@sourcemage.org>
+	* PREPARE: add 1.5 branch
+	*DETAILS: version 1.5.0
+
 2013-08-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.3
 
