--- a/xorg-app/xlsclients/HISTORY
+++ b/xorg-app/xlsclients/HISTORY
@@ -1,3 +1,6 @@
+2014-06-03 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.1.3
+
 2010-06-26 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.1.0
 	  SOURCE matches upstream posted SHA1
