--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-ghc-syb-utils: new spell, boilerplate reduction for the
+	  GHC API
+
 2014-06-01  Treeve Jelbert <treeve@sourcemage.org>
 	* accounts, group: add sddm
 
