--- a/utils/grep/HISTORY
+++ b/utils/grep/HISTORY
@@ -1,3 +1,6 @@
+2014-06-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.20
+
 2014-05-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.19
 
