--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-06-055 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.19
+
 2014-04-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: libxml2 is optional
 
