--- a/devel/bison/HISTORY
+++ b/devel/bison/HISTORY
@@ -1,3 +1,6 @@
+2014-06-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.2
+
 2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0
 
