--- a/libs/libtasn1/HISTORY
+++ b/libs/libtasn1/HISTORY
@@ -1,4 +1,7 @@
-2013-12-17Treeve Jelbert <treeve@sourcemage.org>
+2014-06-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.6
+
+2013-12-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4
 
 2012-12-29 Treeve Jelbert <treeve@sourcemage.org>
