--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,7 @@
+2014-06-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell (branch 1.0) to 1.0.1h, (branch 0.9) to
+	  0.9.8za; SECURITY_PATCH++ (7 CVEs)
+
 2014-04-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.0.1g, SECURITY_PATCH=22, CVE-2014-0160
 	* openssl.gpg: import key FA40E9E2
