--- a/wm-addons/i3lock/HISTORY
+++ b/wm-addons/i3lock/HISTORY
@@ -1,3 +1,9 @@
+2014-05-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.5
+	* DEPENDS: add dependencies on libev, libxcb, libx11, libxkbfile,
+	  libxkbcommon, make dependency on cairo mandatory
+	* BUILD: use default_build_make
+
 2012-06-02 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 2.4.1
 
