--- a/shell-term-fm/tilda/HISTORY
+++ b/shell-term-fm/tilda/HISTORY
@@ -1,3 +1,6 @@
+2014-06-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.1.12
+
 2014-01-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.1.11; new website/source url/source check
 	* DEPENDS: added missing dependencies
