--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2014-06-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8.5
+
 2014-04-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.4.3
 
