--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-06-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.0.1
+
 2014-05-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0
 
