--- a/python-pypi/lxml/HISTORY
+++ b/python-pypi/lxml/HISTORY
@@ -1,3 +1,6 @@
+2014-06-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.3.5
+
 2014-03-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.3.3
 
