--- a/xorg-lib/libice/HISTORY
+++ b/xorg-lib/libice/HISTORY
@@ -1,3 +1,6 @@
+2014-06-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.9
+
 2012-03-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.8
 
