--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* fonts-x11/ttf-monofur: new spell, a monospace font
+
 2014-06-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-ghc-syb-utils: new spell, boilerplate reduction for the
 	  GHC API
