--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,4 +1,7 @@
-2014-15-10 Treeve Jelbert <treeve@sourcemage.org>
+2014-06-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.2.1
+
+2014-05-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 10.1.3
 
 2014-14-19 Treeve Jelbert <treeve@sourcemage.org>
