--- a/shell-term-fm/rxvt-unicode/HISTORY
+++ b/shell-term-fm/rxvt-unicode/HISTORY
@@ -1,5 +1,9 @@
+2014-06-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: add dependency on xproto
+	* CONFIGURE, BUILD: make features configurable
+
 2014-05-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* DETILA: version 9.20
+	* DETAILS: version 9.20
 
 2013-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 9.19
