--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-08  Treeve Jelbert <treeve@sourcemage.org>
+	* graphics-libs/libepoxy: new spell, GL settings manager
+
 2014-06-01  Treeve Jelbert <treeve@sourcemage.org>
 	* accounts, group: add sddm
 
