--- a/xorg-driver/xf86-video-modesetting/HISTORY
+++ b/xorg-driver/xf86-video-modesetting/HISTORY
@@ -1,3 +1,6 @@
+2014-06-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: mesalib => MESALIB
+
 2013-12-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS version 0.8.1
 
