--- a/chat-irc/irssi/HISTORY
+++ b/chat-irc/irssi/HISTORY
@@ -1,3 +1,6 @@
+2014-06-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.16
+
 2011-09-27 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: fixed the fix ;) SOURCE has to exist before
 	  SOURCE2=$SOURCE.sig can be used.
