--- a/x11/xclip/HISTORY
+++ b/x11/xclip/HISTORY
@@ -1,3 +1,6 @@
+2014-06-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2009-11-01 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.12
 
