--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-06-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/kernels/3.15, latest.defaults,
+	  info/patches/maintenance_patches_3/patch-3.15: version 3.15
+
 2014-06-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.14.6: added
 	* latest_defaults: version 3.14.6
