--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,6 @@
+2014-06-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7
+
 2014-05-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, INSTALL: replace the udev.conf that comes with eudev
 	  with ours in PRE_BUILD so /dev/shm gets created
