--- a/gnome2-libs/at-spi2-atk/HISTORY
+++ b/gnome2-libs/at-spi2-atk/HISTORY
@@ -1,3 +1,6 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILAS: version 2.12.1
+
 2013-05-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.8.1
 
