--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,8 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: do not use autogen.sh, use autoreconf
+	  do not disable gdbus-codegen, it is needed by gtk+3
+	* DETAILS: PATCHLEVEL=1
+	  
 2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.40.0
 
