--- a/x11-toolkits/gtk+3/HISTORY
+++ b/x11-toolkits/gtk+3/HISTORY
@@ -1,3 +1,6 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.12.2
+
 2013-12-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.8.8
 
