--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: 2.1.4
+
 2014-02-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.3
 
