--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,7 @@
+2014-05-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.3
+	* DEPEDNS: add mdnsresponder
+
 2014-01-9 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.1
 
