--- a/gnome2-libs/gobject-introspection/HISTORY
+++ b/gnome2-libs/gobject-introspection/HISTORY
@@ -1,3 +1,6 @@
+2014-06-09 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 1.40.0
+
 2013-11-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.38.0
 
