--- a/x11/conky/HISTORY
+++ b/x11/conky/HISTORY
@@ -1,3 +1,6 @@
+2014-06-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2013-02-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* CONFIGURE: add optional support for hdd temperature, per task
 	  IO stats and IPv4 port monitoring
