--- a/devel/xdg-utils/HISTORY
+++ b/devel/xdg-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.0-rc1
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Runtime depends on xprop
 
