--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.16.1
+
 2014-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.16
 
