--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.0
+
 2014-05-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.0
 	  fix typo - ' => "
