--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.1
+
 2014-05-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.6
 
